Fixed spacing and added profile description

--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ p {
 }
 
 .featured-project h2 {
-  font-size: 64px;
+  font-size: 48px;
 }
 
 .featured-project p {
